[gd_scene load_steps=9 format=2]

[ext_resource path="res://AI_Chat.gd" type="Script" id=1]
[ext_resource path="res://Theme.tres" type="Theme" id=2]
[ext_resource path="res://Photo/Hide.png" type="Texture" id=3]
[ext_resource path="res://Photo/ShutDown.png" type="Texture" id=4]
[ext_resource path="res://Photo/ChangeMode.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0 )

[node name="聊天室" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="聊天室" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="标题" type="ColorRect" parent="聊天室"]
anchor_right = 1.0
margin_left = 25.0
margin_right = -50.0
margin_bottom = 24.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="标题" type="Label" parent="聊天室/标题"]
anchor_right = 1.0
anchor_bottom = 1.0
text = " 思知"
valign = 1
clip_text = true

[node name="拖拽" type="Button" parent="聊天室/标题"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0

[node name="消息" type="ColorRect" parent="聊天室"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
margin_bottom = -26.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="消息" type="RichTextLabel" parent="聊天室/消息"]
margin_left = 3.0
margin_top = 3.0
margin_right = 247.0
margin_bottom = 346.0
meta_underlined = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="输入" type="ColorRect" parent="聊天室"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -25.0
margin_right = -51.0
margin_bottom = -1.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="输入" type="LineEdit" parent="聊天室/输入"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = -2.0
placeholder_text = "请输入聊天消息"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="发送" type="ColorRect" parent="聊天室"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -25.0
margin_bottom = -1.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="发送" type="Button" parent="聊天室/发送"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "发送"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="切换模式" type="ColorRect" parent="聊天室"]
margin_right = 24.0
margin_bottom = 24.0
color = Color( 0.101961, 0.101961, 0.101961, 0.74902 )

[node name="切换模式" type="TextureButton" parent="聊天室/切换模式"]
margin_left = 2.0
margin_top = 2.0
margin_right = 22.0
margin_bottom = 22.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
stretch_mode = 3

[node name="关闭" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_bottom = 24.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )

[node name="关闭" type="TextureButton" parent="关闭"]
margin_left = 2.0
margin_top = 2.0
margin_right = 22.0
margin_bottom = 22.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 3

[node name="隐藏" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -49.0
margin_right = -25.0
margin_bottom = 24.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )

[node name="隐藏" type="TextureButton" parent="隐藏"]
margin_left = 2.0
margin_top = 2.0
margin_right = 22.0
margin_bottom = 22.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="聊天室/发送/发送" to="." method="_on_send_pressed"]
[connection signal="pressed" from="聊天室/切换模式/切换模式" to="." method="_on_change_mode_pressed"]
[connection signal="pressed" from="关闭/关闭" to="." method="_on_close_pressed"]
[connection signal="pressed" from="隐藏/隐藏" to="." method="_on_hide_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
